fixed overflow x issue on project1.html / problem-text section added atLargeY mixin

--- a/app/assets/styles/abstracts/_mixins.css
+++ b/app/assets/styles/abstracts/_mixins.css
@@ -4,6 +4,12 @@
   }
 }
 
+@define-mixin atLargeY {
+  @media screen and (max-height: 1500px) {
+    @mixin-content;
+  }
+}
+
 @define-mixin atXXSmall {
   @media screen and (min-width: 475px) {
     @mixin-content;
